Configure jlink command in Bach's own build program